# thesis

./: .gitignore  .gitmodules  LICENSE  README.md  TODO.md  fitthesis.cls  gource.sh  projekt.org  projekt.tex
doc/: .gitignore  metadata.tex  projekt.org  projekt.tex
doc-final-presentation/: prezentace.tex
doc-final-thesis/: metadata.tex  projekt.bib  projekt.org  projekt.tex
doc-midterm-presentation/: midterm-presentation.org  midterm-presentation.tex
doc-midterm-report/: midterm-report.org  midterm-report.tex
nix/: docker.nix  vbox.nix
src/: .dir-locals.el  cabal.project  default.nix  release.nix
src-demo/: .dir-locals.el  cabal.project  default.nix  release.nix
src-demo/tapaw-7guis/: tapaw-7guis.cabal
src-demo/tapaw-7guis/src/: Main.hs  Utils.hs
src-demo/tapaw-7guis/src/Tasks/: Cells.hs  Counter.hs  Crud.hs  FlightBooker.hs  TempConverter.hs
src-demo/tapaw-hnpwa/: tapaw-hnpwa.cabal
src-demo/tapaw-hnpwa/src/: Main-simple.hs
src-demo/tapaw-hnpwa/src-bin/: main-gen.hs  main-warp.hs
src-demo/tapaw-hnpwa/src/Tapaw/: HNPwa.hs
src-demo/tapaw-hnpwa/src/Tapaw/HNPwa/: Navigation.hs  Types.hs  Utils.hs
src-demo/tapaw-hnpwa/static/: index.html  sw.js
src-demo/tapaw-realworld-client/: tapaw-realworld-client.cabal
src-demo/tapaw-realworld-client/server/app/: package.yaml
src-demo/tapaw-realworld-client/src/: Main.hs
src-demo/tapaw-realworld-client/src-bin/: main-gen.hs  main-ghcjs.hs  main-warp.hs
src-demo/tapaw-realworld-client/src/Tapaw/RealWorld/: Client.hs
src-demo/tapaw-realworld-client/src/Tapaw/RealWorld/Client/: API.hs  Types.hs  Utils.hs
src-demo/tapaw-realworld-client/static/: index.html
src-demo/tapaw-realworld-client/test/integration/: README.md
src-demo/tapaw-realworld-client/test/integration/puppeteer/: Dockerfile  package.json
src-demo/tapaw-realworld-client/test/integration/tests/: LICENCE  smoke.test.js
src-demo/tapaw-todomvc/: tapaw-todomvc.cabal
src-snippets/: README.md  default.nix
src-snippets/app-7guis/: .dir-locals.el  Main.hs  app-7guis.cabal  default.nix
src-snippets/deployment-nixops/: .envrc  README.md  cabal.project  default.nix  module.nix  network.nix  release.nix
src-snippets/deployment-nixops/hello-server/: Main.hs  hello-server.cabal
src-snippets/editor-emacs/: README.md  default.el  default.nix
src-snippets/effect-base/: .dir-locals.el  Main.hs  default.nix  effect-base.cabal
src-snippets/ghcid-here/: default.nix
src-snippets/hydration/: .dir-locals.el  Main.hs  default.nix  hydration.cabal
src-snippets/routing-record/: .dir-locals.el  Main.hs  default.nix  routing-record.cabal
src-snippets/routing-record/Reflex/: Link.hs
src-snippets/routing-record/Servant/: App.hs  Render.hs
src-snippets/routing-record/Servant/App/: AsApp.hs  AsAppLink.hs  AsGenerator.hs  Client.hs  TupleProduct.hs  Types.hs
src-snippets/routing-record/Servant/Common/: PopState.hs  Req.hs  Uri.hs
src-snippets/routing-record/Servant/Render/: Client.hs
src-snippets/service-worker/: .dir-locals.el  Main.hs  default.nix  service-worker.cabal
src-snippets/service-worker-manual/: README.md  (+2 more)
src-snippets/simple-client/: Main.hs  default.nix  simple-client.cabal  simple-client.nix  trivial-client.cabal
src-snippets/simple-server/: .dir-locals.el  .envrc  README.md  default.nix  trivial-server.cabal
src-snippets/skeleton/: .dir-locals.el  README.md  cabal.project  default.nix  project.cabal  site.webmanifest  sw.js
src-snippets/skeleton/src/: Project.hs
src-snippets/skeleton/src-bin/: main-gen.hs  main-ghcjs.hs
src-snippets/skeleton/src/Project/: Prelude.hs  Types.hs
src-snippets/skeleton/static/: index.css  index.html
src-snippets/storage-trans/: .dir-locals.el  Main.hs  default.nix  storage-trans.cabal
src-snippets/test-unit/: README.md  default.nix  test-unit.cabal  test-unit.nix
src-snippets/test-unit/src/Demo/: BusinessLogic.hs  Effects.hs  Lib.hs
src-snippets/test-unit/test/: .dir-locals.el  test.hs
src-snippets/test-unit/test/Demo/: BusinessLogicTest.hs  EffectsTest.hs
src-snippets/webapp-manifest/: .dir-locals.el  Main.hs  default.nix  webapp-manifest.cabal
src/tapaw-core/: CHANGELOG.md  LICENSE  tapaw-core.cabal
src/tapaw-core/Tapaw/: Prelude.hs
src/tapaw-hnpwa/: tapaw-hnpwa.cabal
src/tapaw-hnpwa/src/: Main-warp.hs  Main.hs
src/tapaw-hnpwa/src/Tapaw/: HNPwa.hs
src/tapaw-hnpwa/static/: sw.js
src/tapaw-prerender/: tapaw-prerender.cabal
src/tapaw-prerender/src/: Main.hs
src/tapaw-realworld-client/: tapaw-realworld-client.cabal
src/tapaw-realworld-client/src/: Main-warp.hs
src/tapaw-realworld-client/src/Tapaw/RealWorld/: API.hs  Client.hs  Types.hs
src/tapaw-realworld-client/src/Tapaw/RealWorld/Client/: API.hs  Navigation.hs  Types.hs  Utils.hs
src/tapaw-realworld-client/test/integration/: docker-compose.yml
src/tapaw-realworld-client/test/integration/backend/: Dockerfile
src/tapaw-realworld-client/test/integration/dockerhost/: entrypoint.sh
src/tapaw-route/: Main.hs  tapaw-route.cabal
src/tapaw-route/Tapaw/: Servant.hs
src/tapaw-route/Tapaw/Servant/: AsApp.hs  AsAppLink.hs  AsGenerator.hs  Client.hs  Routed.hs  TupleProduct.hs  Types.hs
src/tapaw-route/src-bin/: Main.hs
src/tapaw-serviceworker/: tapaw-serviceworker.cabal
src/tapaw-serviceworker/Tapaw/: ServiceWorker.hs
src/tapaw-serviceworker/Tapaw/ServiceWorker/: Client.hs  Gen.hs  Server.hs
src/tapaw-serviceworker/Tapaw/ServiceWorker/Client/: Types.hs
src/tapaw-serviceworker/src-bin/: Main.hs  SWGen.hs  SWPush.hs
src/tapaw-storage/: tapaw-storage.cabal
src/tapaw-storage-jsaddle/: tapaw-storage-jsaddle.cabal
src/tapaw-storage-jsaddle/Tapaw/Storage/: LocalStorage.hs
src/tapaw-storage-persistent/: tapaw-storage-persistent.cabal
src/tapaw-storage-persistent/Tapaw/Storage/: Persistent.hs
src/tapaw-storage/Tapaw/: Storage.hs
src/tapaw-storage/Tapaw/Storage/: KV.hs
src/tapaw-storage/src-bin/: StorageTest.hs
src/tapaw-todomvc/: tapaw-todomvc.cabal
src/tapaw-todomvc/src/: Main.hs
src/tapaw-webmanifest/: tapaw-webmanifest.cabal
src/tapaw-webmanifest/Tapaw/: WebManifest.hs
(+41 files in other folders)
