name:                tapaw-7guis
version:             0.1.0.0
license:             BSD3
author:              Jakub Zárybnický
maintainer:          jakub@zarybnicky.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable tapaw-7guis
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:        -Wall
                      -Wcompat
                      -Wincomplete-uni-patterns
                      -Wincomplete-record-updates
                      -Wredundant-constraints
                      -Wmonomorphism-restriction
                      -fwarn-tabs

  if impl(ghcjs -any)
    ghc-options:      -dedupe
    cpp-options:      -DGHCJS_BROWSER

  build-depends:       base
                     , array
                     , bytestring
                     , containers
                     , generic-lens
                     , ghcjs-dom
                     , jsaddle
                     , jsaddle-warp
                     , lens
                     , megaparsec
                     , mtl
                     , reflex-dom-core
                     , text
                     , time
                     , transformers

  other-modules:     Tasks.Counter
                     Tasks.TempConverter
                     Tasks.FlightBooker
                     Tasks.Timer
                     Tasks.Crud
                     Tasks.CircleDrawer
                     Tasks.Cells
                     Utils
