name:                trivial-server
version:             0.1.0.0
license:             BSD3
author:              Jakub Zárybnický
maintainer:          jakub@zarybnicky.com
build-type:          Simple
cabal-version:       >=1.10

executable trivial-server
  main-is:             Main.hs
  default-language:    Haskell2010

  ghc-options:        -Wall
                      -Wcompat
                      -Wincomplete-uni-patterns
                      -Wincomplete-record-updates
                      -Wredundant-constraints
                      -Wmonomorphism-restriction
                      -fwarn-tabs
                      -O2

  build-depends:       base >=4.11 && <4.12
                     , aeson
                     , aeson-pretty
                     , bytestring
                     , servant-server
                     , servant-swagger
                     , text
                     , wai
                     , warp
