name:                storage-trans
version:             0.1.0.0
license:             BSD3
author:              Jakub Zárybnický
maintainer:          jakub@zarybnicky.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable storage-trans
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options: -Wall
               -Wcompat
               -Wincomplete-uni-patterns
               -Wincomplete-record-updates
               -Wredundant-constraints
               -Wmonomorphism-restriction
               -fwarn-tabs

  if impl(ghcjs -any)
    ghc-options: -dedupe
    cpp-options: -DGHCJS_BROWSER
  build-depends: base >=4.11 && <4.12
               , containers
               , dependent-sum
               , ghcjs-dom
               , lens
               , jsaddle
               , jsaddle-warp
               , mtl
               , reflex-dom-core
               , text
