name:                test-unit
version:             0.1.0.0
license:             BSD3
author:              Jakub Zárybnický
maintainer:          jakub@zarybnicky.com
build-type:          Simple
cabal-version:       >=1.24

library
  default-language:  Haskell2010
  hs-source-dirs:    src
  ghc-options:       -Wall
                     -Wcompat
                     -Wincomplete-uni-patterns
                     -Wincomplete-record-updates
                     -Wredundant-constraints
                     -Wmonomorphism-restriction
                     -fwarn-tabs
                     -fdiagnostics-color=never
  build-depends:     base >=4.11 && <4.12
                   , aeson
                   , containers
                   , jwt
                   , mtl
                   , random
                   , text
                   , time
                   , uuid-types
  exposed-modules:   Demo.Effects
                     Demo.Lib
                     Demo.BusinessLogic

test-suite test
  type:              exitcode-stdio-1.0
  default-language:  Haskell2010
  main-is:           test.hs
  ghc-options:       -Wall
                     -Wcompat
                     -Wincomplete-uni-patterns
                     -Wincomplete-record-updates
                     -Wredundant-constraints
                     -Wmonomorphism-restriction
                     -fwarn-tabs
                     -fdiagnostics-color=never
                     -threaded -O2
  hs-source-dirs:    test
  other-modules:     Demo.EffectsTest
                     Demo.BusinessLogicTest
  build-depends:     base >=4.11 && <4.12

                 -- This very library and its dependencies
                   , test-unit
                   , mtl
                   , uuid-types

                 -- Test dependencies
                   , hedgehog
                   , hspec
                   , tasty
                   , tasty-hspec
                   , tasty-hedgehog
