cabal-version:       2.2

name:                tapaw-core
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/zarybnicky/thesis
bug-reports:         https://github.com/zarybnicky/thesis/issues
license:             BSD-3-Clause
license-file:        LICENSE
author:              Jakub Zárybnický
maintainer:          jakub@zarybnicky.com
-- copyright:
category:            Web
extra-source-files:  CHANGELOG.md

library
  hs-source-dirs:      .
  default-language:    Haskell2010
  ghc-options:        -Wall
                      -Wcompat
                      -Wincomplete-uni-patterns
                      -Wincomplete-record-updates
                      -Wredundant-constraints
                      -Wmonomorphism-restriction
                      -fwarn-tabs
                      -fdiagnostics-color=never

  exposed-modules:     Tapaw.Prelude

  build-depends:       base ^>=4.11.1.0
                     , bytestring
                     , containers
                     , data-default
                     , generic-lens
                     , jsaddle
                     , lens
                     , mtl
                     , reflex
                     , reflex-dom-core
                     , text
                     , transformers
                     , unordered-containers
