name:                tapaw-prerender
version:             0.1.0.0
license:             BSD3
author:              Jakub Zárybnický
maintainer:          jakub@zarybnicky.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable tapaw-prender
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:        -Wall
                      -Wcompat
                      -Wincomplete-uni-patterns
                      -Wincomplete-record-updates
                      -Wredundant-constraints
                      -Wmonomorphism-restriction
                      -fwarn-tabs

  main-is:             Main.hs

  build-depends:       base
                     , aeson
                     , bytestring
                     , containers
                     , dependent-map
                     , dependent-sum
                     , generic-lens
                     , ghcjs-dom
                     , lens
                     , jsaddle
                     , jsaddle-warp
                     , mtl
                     , reflex-dom-core
                     , text
                     , time
