name:                tapaw-realworld-client
version:             0.1.0.0
license:             BSD3
author:              Jakub Zárybnický
maintainer:          jakub@zarybnicky.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable tapaw-realworld-client
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:        -Wall
                      -Wcompat
                      -Wincomplete-uni-patterns
                      -Wincomplete-record-updates
                      -Wredundant-constraints
                      -Wmonomorphism-restriction
                      -fwarn-tabs

  if impl(ghcjs -any)
    ghc-options:      -dedupe
    cpp-options:      -DGHCJS_BROWSER
    main-is:           Main.hs
  else
    main-is:           Main-warp.hs
    build-depends:     base >=4.11 && <4.12
                     , wai
                     , wai-app-static
                     , warp
                     , websockets

  other-modules:       Tapaw.RealWorld.API
                       Tapaw.RealWorld.Client
                       Tapaw.RealWorld.Client.API
                       Tapaw.RealWorld.Client.Navigation
                       Tapaw.RealWorld.Client.Types
                       Tapaw.RealWorld.Client.Utils
                       Tapaw.RealWorld.Types

  build-depends:       base >=4.11 && <4.12
                     , aeson
                     , bytestring
                     , containers
                     , generic-lens
                     , ghcjs-dom
                     , lens
                     , jsaddle
                     , jsaddle-warp
                     , mtl
                     , reflex-dom-core
                     , servant
                     , servant-auth
                     , servant-reflex
                     , text
                     , these
                     , time
