name:                tapaw-route
version:             0.1.0.0
license:             BSD3
author:              Jakub Zárybnický
maintainer:          jakub@zarybnicky.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  default-language:  Haskell2010
  ghc-options:      -Wall
                    -Wcompat
                    -Wincomplete-uni-patterns
                    -Wincomplete-record-updates
                    -Wredundant-constraints
                    -Wmonomorphism-restriction
                    -fwarn-tabs

  exposed-modules:   Tapaw.Servant
                     Tapaw.Servant.AsApp
                     Tapaw.Servant.AsAppLink
                     Tapaw.Servant.AsGenerator
                     Tapaw.Servant.Client
                     Tapaw.Servant.Routed
                     Tapaw.Servant.TupleProduct
                     Tapaw.Servant.Types

  build-depends:     base
                   , bytestring
                   , containers
                   , directory
                   , generic-lens
                   , ghcjs-dom
                   , lens
                   , jsaddle
                   , jsaddle-warp
                   , mtl
                   , reflex-dom-core
                   , servant
                   , text
                   , uri-bytestring

executable route-test
  hs-source-dirs:    src-bin
  main-is:           Main.hs
  default-language:  Haskell2010
  ghc-options:      -Wall
                    -Wcompat
                    -Wincomplete-uni-patterns
                    -Wincomplete-record-updates
                    -Wredundant-constraints
                    -Wmonomorphism-restriction
                    -fwarn-tabs

  if impl(ghcjs -any)
    ghc-options:    -dedupe
    cpp-options:    -DGHCJS_BROWSER

  build-depends:     base
                   , tapaw-route
                   , jsaddle
                   , jsaddle-warp
                   , reflex-dom-core
                   , text
                   , servant
                   , uri-bytestring
