name:                tapaw-serviceworker
version:             0.1.0.0
license:             BSD3
author:              Jakub Zárybnický
maintainer:          jakub@zarybnicky.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  default-language:  Haskell2010
  ghc-options:      -Wall
                    -Wcompat
                    -Wincomplete-uni-patterns
                    -Wincomplete-record-updates
                    -Wredundant-constraints
                    -Wmonomorphism-restriction
                    -fwarn-tabs

  exposed-modules:   Tapaw.ServiceWorker
                     Tapaw.ServiceWorker.Client
                     Tapaw.ServiceWorker.Client.Types
                     Tapaw.ServiceWorker.Server

  build-depends:     base
                   , aeson
                   , bytestring
                   , containers
                   , generic-lens
                   , ghcjs-dom
                   , http-media
                   , lens
                   , jmacro
                   , jsaddle
                   , mtl
                   , reflex-dom-core
                   , text
                   , wl-pprint-text

executable sw-test
  default-language:  Haskell2010
  ghc-options:      -Wall
                    -Wcompat
                    -Wincomplete-uni-patterns
                    -Wincomplete-record-updates
                    -Wredundant-constraints
                    -Wmonomorphism-restriction
                    -fwarn-tabs

  hs-source-dirs:    src-bin
  main-is:           Main.hs

  if impl(ghcjs -any)
    ghc-options:    -dedupe
    cpp-options:    -DGHCJS_BROWSER

  build-depends:     base
                   , bytestring
                   , tapaw-serviceworker
