name:                tapaw-serviceworker
version:             0.1.0.0
license:             BSD3
author:              Jakub Zárybnický
maintainer:          jakub@zarybnicky.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  default-language:  Haskell2010
  ghc-options:      -Wall
                    -Wcompat
                    -Wincomplete-uni-patterns
                    -Wincomplete-record-updates
                    -Wredundant-constraints
                    -Wmonomorphism-restriction
                    -fwarn-tabs

  exposed-modules:   Tapaw.ServiceWorker
                     Tapaw.ServiceWorker.Client
                     Tapaw.ServiceWorker.Client.Types
                     Tapaw.ServiceWorker.Server

  build-depends:     base
                   , aeson
                   , bytestring
                   , containers
                   , generic-lens
                   , ghcjs-dom
                   , http-media
                   , lens
                   , jmacro
                   , jsaddle
                   , mtl
                   , reflex-dom-core
                   , text
                   , wl-pprint-text

executable sw-gen
  hs-source-dirs:    src-bin
  main-is:           SWGen.hs
  default-language:  Haskell2010
  ghc-options:      -Wall
                    -Wcompat
                    -Wincomplete-uni-patterns
                    -Wincomplete-record-updates
                    -Wredundant-constraints
                    -Wmonomorphism-restriction
                    -fwarn-tabs

  build-depends:     base
                   , bytestring
                   , tapaw-serviceworker

executable sw-push
  if impl(ghcjs -any)
    buildable: False
  hs-source-dirs:    src-bin
  main-is:           SWPush.hs
  default-language:  Haskell2010
  ghc-options:      -Wall
                    -Wcompat
                    -Wincomplete-uni-patterns
                    -Wincomplete-record-updates
                    -Wredundant-constraints
                    -Wmonomorphism-restriction
                    -fwarn-tabs

  build-depends:     base
                   , aeson
                   , bytestring
                   , lens
                   , jsaddle
                   , jsaddle-warp
                   , reflex-dom-core
                   , tapaw-serviceworker
                   , text
                   , wai
                   , wai-app-static
                   , warp
                   , websockets
