name:                tapaw-storage-jsaddle
version:             0.1.0.0
license:             BSD3
author:              Jakub Zárybnický
maintainer:          jakub@zarybnicky.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  default-language:  Haskell2010
  ghc-options:      -Wall
                    -Wcompat
                    -Wincomplete-uni-patterns
                    -Wincomplete-record-updates
                    -Wredundant-constraints
                    -Wmonomorphism-restriction
                    -fwarn-tabs

  exposed-modules:   Tapaw.Storage.LocalStorage

  build-depends:     base
                   , containers
                   , data-default
                   , dependent-sum
                   , ghcjs-dom
                   , lens
                   , jsaddle
                   , jsaddle-warp
                   , mtl
                   , reflex-dom-core
                   , text
