name:                tapaw-storage
version:             0.1.0.0
license:             BSD3
author:              Jakub Zárybnický
maintainer:          jakub@zarybnicky.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  default-language:  Haskell2010
  ghc-options:      -Wall
                    -Wcompat
                    -Wincomplete-uni-patterns
                    -Wincomplete-record-updates
                    -Wredundant-constraints
                    -Wmonomorphism-restriction
                    -fwarn-tabs

  exposed-modules:   Tapaw.Storage

  build-depends:     base
                   , aeson
                   , bytestring
                   , containers
                   , data-default
                   , ghcjs-dom
                   , jsaddle
                   , mtl
                   , reflex-dom-core
                   , text

executable storage-test
  hs-source-dirs:    src-bin
  main-is:           StorageTest.hs
  default-language:  Haskell2010
  ghc-options:      -Wall
                    -Wcompat
                    -Wincomplete-uni-patterns
                    -Wincomplete-record-updates
                    -Wredundant-constraints
                    -Wmonomorphism-restriction
                    -fwarn-tabs

  if impl(ghcjs -any)
    ghc-options:    -dedupe
    cpp-options:    -DGHCJS_BROWSER

  build-depends:     base
                   , tapaw-storage
                   , aeson
                   , bytestring
                   , containers
                   , data-default
                   , ghcjs-dom
                   , jsaddle
                   , jsaddle-warp
                   , mtl
                   , reflex-dom-core
                   , text
