name:                tapaw-todomvc
version:             0.1.0.0
license:             BSD3
author:              Jakub Zárybnický
maintainer:          jakub@zarybnicky.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable tapaw-todomvc
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:        -Wall
                      -Wcompat
                      -Wincomplete-uni-patterns
                      -Wincomplete-record-updates
                      -Wredundant-constraints
                      -Wmonomorphism-restriction
                      -fwarn-tabs
                      -fdiagnostics-color=never
  if impl(ghcjs -any)
    ghc-options:      -dedupe

  build-depends:       base >=4.11 && <4.12
                     , bytestring
                     , containers
                     , file-embed
                     , ghcjs-dom
                     , lens
                     , jsaddle
                     , jsaddle-warp
                     , reflex-dom-core
                     , text
                     , time
