name:                hello-server
version:             0.1.0.0
license:             BSD3
author:              Jakub Zárybnický
maintainer:          jakub@zarybnicky.com
build-type:          Simple
cabal-version:       >=1.10

executable hello-server
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options: -Wall
               -Wcompat
               -Wincomplete-uni-patterns
               -Wincomplete-record-updates
               -Wredundant-constraints
               -Wmonomorphism-restriction
               -fwarn-tabs
               -O2
  build-depends:       base
                     , aeson
                     , servant-server
                     , transformers
                     , wai
                     , warp
